FEAT Atualização dos dados

--- a/src/app/navegacao/home/home.component.html
+++ b/src/app/navegacao/home/home.component.html
@@ -5,8 +5,8 @@
           <img src="https://angular.io/assets/images/logos/angular/angular.svg" />
         </div>
         <div class="col-lg-10">
-          <h1 class="display-4 text-white mt-5 mb-2">Desenvolvimento SPA com Angular</h1>
-          <p class="lead mb-5 text-white">Você está pronto para aprender muito sobre este fantástico framework SPA?</p>
+          <h1 class="display-4 text-white mt-5 mb-2">Blog Unifor</h1>
+          <p class="lead mb-5 text-white">Você está pronto para saber todas as atualizações da nossa universidade?</p>
         </div>
       </div>
     </div>
