--- a/src/app/navegacao/menu/menu.component.html
+++ b/src/app/navegacao/menu/menu.component.html
@@ -7,16 +7,13 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-           <a class="nav-link"  [routerLink]="['/produtos']">Produtos</a>
+           <a class="nav-link"  [routerLink]="['/']">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link"  [routerLink]="['/sobre']">Sobre</a>
           </li>
           <li class="nav-item">
             <a class="nav-link"  [routerLink]="['/contato']">Contato</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/feature-data-binding']">Features</a>
           </li>
         </ul>
       </div>
